--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JS Arrow Functions</title>
+    <title>JS Functions</title>
 </head>
 <body>
-    <h1>JS Arrow Functions Practice</h1>
+    <h1>JS Functions Practice</h1>
     <h3>Add your first and last name here</h3>>
     <script src="main.js"></script>
 </body>
