--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>JS Functions Practice</h1>
-    <h3>Add your first and last name here</h3>>
+    <h3>Add your first and last name here</h3>
     <script src="main.js"></script>
 </body>
 </html>
