--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>JS Functions Practice</h1>
     <h3>Add your first and last name here</h3>
-    <script src="main.js"></script>
+    <script src="function-expression.js"></script>
 </body>
 </html>
